brat/test/golden/error/multilambda-id.brat.golden
Error in test/golden/error/multilambda-id.brat@FC {start = Pos {line = 2, col = 15}, end = Pos {line = 2, col = 16}}:
f = { true => |
              ^

  Elab error "Noun required at this position"

